sdk-scripts/labs/gsp1088/release/istio-manifests.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# ----------------------------------------------------------
# WARNING: This file is autogenerated. Do not manually edit.
# ----------------------------------------------------------

# [START servicemesh_release_istio_manifests_microservices_demo]
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
    name: istio-gateway
spec:
    gatewayClassName: istio
    listeners:
        - name: http
          port: 80
          protocol: HTTP
          allowedRoutes:
              namespaces:
                  from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: frontend-route
spec:
    parentRefs:
        - name: istio-gateway
    rules:
        - matches:
              - path:
                    value: /
          backendRefs:
              - name: frontend
                port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
    name: allow-egress-googleapis
spec:
    hosts:
        - 'accounts.google.com' # Used to get token
        - '*.googleapis.com'
    ports:
        - number: 80
          protocol: HTTP
          name: http
        - number: 443
          protocol: HTTPS
          name: https
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
    name: allow-egress-google-metadata
spec:
    hosts:
        - metadata.google.internal
    addresses:
        - 169.254.169.254 # GCE metadata server
    ports:
        - number: 80
          name: http
          protocol: HTTP
        - number: 443
          name: https
          protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: frontend
spec:
    hosts:
        - 'frontend.default.svc.cluster.local'
    http:
        - route:
              - destination:
                    host: frontend
                    port:
                        number: 80
# [END servicemesh_release_istio_manifests_microservices_demo]
